--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,10 @@ envlist = py36
 deps =
     pytest
     pytest-cov
-commands = pytest --cov=mawk --cov-report=term-missing
+#commands = pytest --cov=mawk --cov-report=term-missing
+commands = pytest 
 
 [pytest]
 testpaths = tests
-addopts = --cov=mawk --cov-report=term-missing
+#addopts = --cov=mawk --cov-report=term-missing
 python_files = test*.py
